chore: Update manifest to match AnkiWeb

--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
 {
     "package": "1677423205",
-    "name": "Automatic Scoring"
+    "name": "Automatic Scoring and Progression (correct and time based)"
 }
